src/App.css
/* @import url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Th.woff2); */

* {
  margin: 0px;
  padding: 0px;
  font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu,
    sans-serif;
  src: url("./fonts/Netflix\ Sans\ Light.otf");
  box-sizing: border-box;
  font-size: 1.25rem;
}
body {
  background-color: black;
  color: #fff;
}

.background {
  display: block;
  background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/a56dc29b-a0ec-4f6f-85fb-50df0680f80f/2f8ae902-8efe-49bb-9a91-51b6fcc8bf46/IN-en-20240617-popsignuptwoweeks-perspective_alpha_website_small.jpg");
  background-size: cover;
  background-color: #3333;
  background-repeat: no-repeat;
  background-position: center;
}
.container {
  /* display: grid; */
  align-items: center;
  justify-content: center;
  padding: 0px 1.5rem 0px 1.5rem;
  margin: auto;
  height: 100vh;
  background: rgba(0, 0, 0, 0.8);
  margin: 0px;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 3rem 0 3rem;
}

.logo {
  cursor: pointer;
}

.header-right {
  display: flex;
  width: 25%;
  align-items: flex-end;
  justify-content: space-between;
}

.lang {
  background-color: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 6rem;
  height: 1.8rem;
  outline: 0.1px solid #fff;
  padding-left: 10px;
  font-size: 50px;
  border-radius: 5px;
  /* position: absolute; */
}

.lang-select {
  background-color: transparent;
  color: #ffff;
  border: none;
  padding-left: 10px;
  font-size: 1rem;
  width: 10rem;
  padding-left: 10px;
}

.lang-option {
  background-color: black;
  border: none;
  display: block;
  font-size: 1rem;
}

.main-a {
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100%;
  line-height: 3rem;
  margin-top: 6rem;
  margin-bottom: 6rem;
}

.line-1 {
  font-size: 2.5rem;
  align-items: center;
  font-weight: 900;
}

.search-container {
  display: grid;
  justify-content: center;
  align-items: center;
}

.search-input-button {
  display: flex;
  justify-content: center;
  align-items: center;
}

.search-input-button input {
  margin-right: 0.5rem;
  /* height: 2.8rem;
  width: 55%; */
  font-size: 1rem;
  padding: 0.7rem 4rem;
  background-color: transparent;
  border: none;
  color: #fff;
  outline: 0.25px solid rgb(255, 255, 255, 0.5);
  box-shadow: 0 0 3px rgb(255, 255, 255, 0.3);
  border-radius: 3px;
}

.search-input-button input:focus {
  outline: 2px solid rgb(255, 255, 255);
}

.search-container p {
  font-size: 1rem;
  font-weight: 500;
}

.main {
  display: flex;
  align-items: center;
  flex-direction: column;
  height: auto;
  margin-top: 1rem;
}

.main-b,
.main-c {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 400px;
  width: 100%;
  margin-top: 2.3rem;
  background-color: black;
  border-top: 10px solid hwb(0 40% 60% / 0.2);
}

.text-block {
  width: 45%;
}

.text-block p:nth-child(1) {
  font-size: 2.5rem;
  align-items: center;
  font-weight: 900;
  margin-bottom: 2.5rem;
}

.text-block p:nth-child(2) {
  align-items: center;
  line-height: 2rem;
}

.video-block {
  width: 500px;
  height: 100%;
}

.video-block img {
  width: 500px;
  height: 400px;
  position: absolute;
}

.main-c img {
  height: 350px;
}

.search-input-button button p:last-child {
  margin-left: 20px;
  font-weight: bold;
  vertical-align: baseline;
  padding: 3px 0 0 0;
}

